[tool.poetry]
name = "eagleview"
version = "1.2"
description = "Greatly enhances Image Data visualisation"
authors = ["Aditya"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.0"
pandas = "^2.0"
pillow = "^10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
